--- a/02-mysql-install.yml
+++ b/02-mysql-install.yml
@@ -1,5 +1,5 @@
 - name: Install MYSQL server
-  hosts: web
+  hosts: db
   tasks: ## Collection or Modules 
   - name: Install MYSQL RPM
     ansible.builtin.package:
