--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,6 @@
 [local]
-local  
+localhost  
 
 
 [db]
-172.31.86.211 ansible-user=ec2-user -e ansible_password=DevOps321
+172.31.86.211 ansible-user=ec2-user ansible_password=DevOps321
