--- a/ping.yml
+++ b/ping.yml
@@ -4,5 +4,9 @@
   tasks: ## Collection or Modules 
   - name: Ping the server 
     ansible.builtin.ping:
+  - name: Print all available facts
+  ansible.builtin.debug:
+    var: ansible_facts
   -name: Gathering localhost Facts
    ansible.builtin.gather_facts: 
+   msg: {{ansible_facts}}
