--- a/ping.yml
+++ b/ping.yml
@@ -1,7 +1,7 @@
-- name: PING 
+- name: Pinging server  
   hosts: local
   connection: local
   tasks: ## Collection or Modules # Gathering facts 
-  -name: Gathering localhost Facts
-   ansible.builtin.debug: 
-   msg: {{ansible_facts}}
+  - name: Gathering localhost Facts
+    ansible.builtin.debug: 
+    msg: {{ ansible_facts }}
