--- a/hello.yaml
+++ b/hello.yaml
@@ -1,5 +1,6 @@
 - name: Print hello 
   hosts: db
-  tasks:
-  ansible.builtin.debug:
-   msg: "Hello World"
+  tasks: 
+  - name: Print hello world
+    ansible.builtin.debug:
+     msg: "Hello World" 
