--- a/06-vars.yaml
+++ b/06-vars.yaml
@@ -5,7 +5,9 @@
     course: "Devops with AWS"
     duration: 20HRS
     trainer: "Shiva Kumar"
-  tasks:
+  tasks: 
     - name: print Variables about devops course 
+      vars:
+       course: Ansible
       ansible.builtin.debug: 
          msg: "course is {{ course }}, Duration is {{ duration }}, and tainer is {{ trainer }}"
