--- a/inventory.ini
+++ b/inventory.ini
@@ -4,3 +4,6 @@ localhost
 
 [db]
 172.31.86.211 ansible-user=ec2-user ansible_password=DevOps321
+
+
+COURSE="Ansible" TRAINER="Sivakumar Reddy" DURATION="10HRS" ansible_user=ec2-user ansible_password=DevOps321
