--- a/inventory.ini
+++ b/inventory.ini
@@ -4,4 +4,8 @@ localhost
 
 [db]
 172.31.86.211 ansible-user=ec2-user ansible_password=DevOps321
-COURSE="Ansible" TRAINER="Sivakumar Reddy" DURATION="10HRS" ansible_user=ec2-user ansible_password=DevOps321
+
+[db:vars]
+COURSE="Ansible" 
+TRAINER="Sivakumar Reddy" 
+DURATION="10HRS"
