--- a/inventory.ini
+++ b/inventory.ini
@@ -6,6 +6,6 @@ localhost
 172.31.86.211 ansible-user=ec2-user ansible_password=DevOps321
 
 [db:vars]
-COURSE="Ansible" 
-TRAINER="Sivakumar Reddy" 
-DURATION="10HRS"
+GREET ="Hello world" 
+WISH ="Happy Pongal" 
+DATE = "Jan 15th"
