--- a/10-vars_inventory.yaml
+++ b/10-vars_inventory.yaml
@@ -3,4 +3,4 @@
   tasks:
    - name: print course information
      ansible.builtin.debug:
-      msg: "course is {{ COURSE }}, Duration is {{ DURATION }}, and tainer is {{ TRAINER }}"
+      msg: "course is {{ GREET }}, Duration is {{ WISH }}, and tainer is {{ DATE }}"
