--- a/inventory.ini
+++ b/inventory.ini
@@ -1,11 +1,11 @@
 [local]
 localhost  
 
-
 [db]
-172.31.86.211 ansible-user=ec2-user ansible_password=DevOps321
+172.31.28.211 ansible-user=ec2-user ansible_password=DevOps321
 
 [db:vars]
-GREET ="Hello world" 
-WISH ="Happy Pongal" 
-DATE = "Jan 15th"
+
+; GREET ="Hello world" 
+; WISH ="Happy Pongal" 
+; DATE = "Jan 15th"
