--- a/create_ec2_route53.yaml
+++ b/create_ec2_route53.yaml
@@ -27,6 +27,8 @@
         image_id: "{{ ami_id }}"
         instance_type: "{{ instance_type }}"
       loop: "{{ instance }}"
+      register: ec2_info
+
     - name: print ec2_info
       ansible.builtin.debug:
         msg: "{{ ec2_info }}"
