--- a/create_ec2_route53.yaml
+++ b/create_ec2_route53.yaml
@@ -35,5 +35,5 @@
     
     - name: Print private ip addresses
       ansible.builtin.debug:
-        msg: "{{ item.item }} : {{ item.instances[0].private_ip_address }}"
+        msg: "{{ item.instances[0].private_ip_address }}"
       loop: "{{ ec2_info.results }}"
