--- a/create_ec2_route53.yaml
+++ b/create_ec2_route53.yaml
@@ -26,7 +26,7 @@
         security_group: "{{ sg_id }}"
         image_id: "{{ ami_id }}"
         instance_type: "{{ instance_type }}"
-      loop: "{{ instances }}"
+      loop: "{{ instance }}"
       register: ec2_info
 
     - name: print ec2_info
