ansible-create_ec2

--- a/create_ec2_route53.yaml
+++ b/create_ec2_route53.yaml
@@ -6,7 +6,7 @@
     sg_id: sg-052223eb3cc8015e5
     ami_id: ami-09c813fb71547fc4f
     instance_type: t2.micro
-    instance: 
+    instances: 
      - mysql
      - backend
      - frontend
