ansible-create_ec2

--- a/create_ec2_route53.yaml
+++ b/create_ec2_route53.yaml
@@ -47,7 +47,7 @@
     - name: Write instance details to a file
       ansible.builtin.copy:
         content: "Instance Name: {{ item.item }}, Private IP: {{ item.instances[0].private_ip_address }}\n"
-        dest: "/tmp/ec2_instances.log"
+        dest: "/home/ec2-user/ansible/ec2_instances.log"
         remote_src: no
         force: yes
         mode: 0644
