ansible-create_ec2

--- a/create_ec2_route53.yaml
+++ b/create_ec2_route53.yaml
@@ -45,7 +45,7 @@
 
 
     - name: Write instance details to a file
-      ansible.builtin.copy:
+      ansible.builtin.lineinfile:
         content: "Instance Name: {{ item.item }}, Private IP: {{ item.instances[0].private_ip_address }}\n"
         dest: "/home/ec2-user/ansible/ec2_instances.log"
         remote_src: no
