ansible-create_ec2

--- a/create_ec2_route53.yaml
+++ b/create_ec2_route53.yaml
@@ -33,7 +33,8 @@
       ansible.builtin.debug:
         msg: "{{ ec2_info }}"
     
-    - name: Print private ip addresses
+    - name: Print private IP addresses
       ansible.builtin.debug:
-        msg: "{{ item.instances.[0].private_ip_address }}"
+        msg: "Instance Name: {{ item.item }}, Private IP: {{ item.instances[0].private_ip_address }}"
       loop: "{{ ec2_info.results }}"
+
