ansible-create_ec2

--- a/create_ec2_route53.yaml
+++ b/create_ec2_route53.yaml
@@ -35,6 +35,6 @@
     
     - name: Print private IP addresses
       ansible.builtin.debug:
-        msg: "Instance Name: {{ item.item }}, Private IP: {{ item.instances[0].private_ip_address }}"
+        msg: "{{ item.instances[0].private_ip_address }}"
       loop: "{{ ec2_info.results }}"
 
