--- a/create_ec2_route53.yaml
+++ b/create_ec2_route53.yaml
@@ -6,6 +6,7 @@
     sg_id: sg-052223eb3cc8015e5
     ami_id: ami-09c813fb71547fc4f
     instance_type: t2.micro
+    zone: ganeshdevops.online
     instances: 
      - mysql
      - backend
@@ -38,3 +39,14 @@
         msg: "{{ item.instances[0].private_ip_address }}"
       loop: "{{ ec2_info.results }}"
 
+    - name: Update new.foo.com as an A record with a list of 3 IPs and wait until the changes have been replicated
+      amazon.aws.route53:
+        state: present
+        zone: "{{ zone }}"
+        record: "{{ item.item }}.{{ zone }}"
+        type: A
+        ttl: 1
+        value: "{{ item.instances[0].private_ip_address }}"
+        wait: true
+        overwrite: true
+      loop: "{{ ec2_info.results }}"
