--- a/create_ec2_route53.yaml
+++ b/create_ec2_route53.yaml
@@ -39,7 +39,7 @@
         msg: "{{ item.instances[0].private_ip_address }}"
       loop: "{{ ec2_info.results }}"
 
-    - name: Update new.foo.com as an A record with a list of 3 IPs and wait until the changes have been replicated
+    - name: Update ganeshdevops.online as an A record with a list of 3 IPs and wait until the changes have been replicated
       amazon.aws.route53:
         state: present
         zone: "{{ zone }}"
@@ -50,3 +50,16 @@
         wait: true
         overwrite: true
       loop: "{{ ec2_info.results }}"
+
+    - name: create pubilc ip for frontend
+      amazon.aws.route53:
+        state: present
+        zone: "{{ zone }}"
+        record: "{{ item.item }}.{{ zone }}"
+        type: A
+        ttl: 1
+        value: "{{ item.instances[0].public_ip_address }}"
+        wait: true
+        overwrite: true
+      loop: "{{ ec2_info.results }}"
+      when: item.item == "frontend"
