--- a/13-nginx-install.yaml
+++ b/13-nginx-install.yaml
@@ -13,5 +13,5 @@
           state: started
 
    - name: print nmgix service
-     ansible.built.debug:
+     ansible.builtin.debug:
         msg: "{{ intem }}"
