--- a/inventory.ini
+++ b/inventory.ini
@@ -1,8 +1,8 @@
 [local]
 localhost  
 
-[db]
-172.31.28.211 ansible-user=ec2-user ansible_password=DevOps321
+[web]
+172.31.46.135 ansible-user=ec2-user ansible_password=DevOps321
 
 [db:vars]
 
